Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.3.0
-
None
-
Qt Creator 2.3.0 from Qt SDK (Windows 7 64 bit)
Nokia N8 with Anna, CODA 4.0.23
-
b79fa21d1d00baf79c05229df268370f2e67c423
Description
Got this crash when trying to start to deploy + debugging a Hello World Application (both with the released 2.3.0 in the SDK and a self-compiled one):
0 Qt4ProjectManager::CodaRunControl::initCommunication codaruncontrol.cpp 229 0x64d9e1eb 1 Qt4ProjectManager::CodaRunControl::run codaruncontrol.cpp 450 0x64d9f92f 2 Qt4ProjectManager::Internal::S60DeviceDebugRunControl::qmlEngineStateChanged s60devicedebugruncontrol.cpp 196 0x64dbc9ea 3 Qt4ProjectManager::Internal::S60DeviceDebugRunControl::qt_metacall moc_s60devicedebugruncontrol.cpp 87 0x64de917e 4 QMetaObject::metacall qmetaobject.cpp 238 0x6db3ff51 5 QMetaObject::activate qobject.cpp 3278 0x6db57106 6 Debugger::DebuggerEngine::stateChanged moc_debuggerengine.cpp 110 0x6518520b 7 Debugger::DebuggerEngine::setState debuggerengine.cpp 1109 0x64fdc002 8 Debugger::DebuggerEnginePrivate::queueRunEngine debuggerengine.cpp 194 0x64fe2544 9 Debugger::DebuggerEngine::notifyInferiorSetupOk debuggerengine.cpp 807 0x64fd91ee 10 Debugger::Internal::QmlEngine::setupInferior qmlengine.cpp 232 0x6516c62b 11 Debugger::DebuggerEnginePrivate::doSetupInferior debuggerengine.cpp 789 0x64fd8f45 12 Debugger::DebuggerEnginePrivate::qt_metacall debuggerengine.moc 95 0x64fdf3c8 13 QMetaObject::metacall qmetaobject.cpp 238 0x6db3ff51 14 QMetaCallEvent::placeMetaCall qobject.cpp 535 0x6db52f60 15 QObject::event qobject.cpp 1217 0x6db53c0d 16 QApplicationPrivate::notify_helper qapplication.cpp 4481 0x6baad1ae 17 QApplication::notify qapplication.cpp 3881 0x6baaaf07 18 QCoreApplication::notifyInternal qcoreapplication.cpp 787 0x6db368c1 19 QCoreApplication::sendEvent qcoreapplication.h 215 0x6db3b799 20 QCoreApplicationPrivate::sendPostedEvents qcoreapplication.cpp 1428 0x6db377a5 21 qt_internal_proc qeventdispatcher_win.cpp 497 0x6db7931d 22 gapfnScSendMessage USER32 0x764562fa 23 GetThreadDesktop USER32 0x76456d3a 24 CharPrevW USER32 0x764577c4 25 DispatchMessageW USER32 0x7645788a 26 QEventDispatcherWin32::processEvents qeventdispatcher_win.cpp 810 0x6db7a336 27 QGuiEventDispatcherWin32::processEvents qapplication_win.cpp 1170 0x6bb62bfe 28 QEventLoop::processEvents qeventloop.cpp 150 0x6db343ce 29 QEventLoop::exec qeventloop.cpp 201 0x6db34500 30 QCoreApplication::exec qcoreapplication.cpp 1064 0x6db36dfd 31 QApplication::exec qapplication.cpp 3756 0x6baaac38 32 main main.cpp 386 0x1126bbf 33 __tmainCRTStartup crtexe.c 555 0x112b5bf 34 mainCRTStartup crtexe.c 371 0x112b3ef 35 BaseThreadInitThunk kernel32 0x7538339a 36 RtlInitializeExceptionChain ntdll 0x77209ed2 37 RtlInitializeExceptionChain ntdll 0x77209ea5