QML Debugging: Fix crash for QML-only debugging on Symbian

Task-number: QTCREATORBUG-6037

Change-Id: I01080d97d21c230a7a32ea943435b2f763b87c41
Reviewed-on: http://codereview.qt-project.org/4687
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Paweł Polański <jaggernod@gmail.com>